--- a/summary.ipynb
+++ b/summary.ipynb
@@ -16,25 +16,12 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "from scipy import stats\n",
     "import math\n",
     "from scipy.stats import spearmanr\n",
-    "from sklearn.decomposition import PCA\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.pipeline import Pipeline\n",
     "\n",
-    "from statsmodels.api import qqplot\n",
-    "from statsmodels.formula.api import ols  #linear regression\n",
-    "from statsmodels.formula.api import logit   #logistic regression\n",
-    "from statsmodels.graphics.mosaicplot import mosaic # plot confusion matrix\n",
     "\n",
-    "from pathlib import Path\n",
-    "\n",
-    "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LinearRegression, Lasso, Ridge, LassoCV, BayesianRidge\n",
-    "import statsmodels.formula.api as sm\n",
-    "import matplotlib.pylab as plt\n",
     "from pathlib import Path\n",
     "\n",
     "import dmba\n",
@@ -42,6 +29,70 @@
     "from dmba import backward_elimination, forward_selection, stepwise_selection\n",
     "from dmba import adjusted_r2_score, AIC_score, BIC_score\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Statsmodel\n",
+    "\n",
+    " is a Python module that provides classes and functions for the estimation of many different statistical models, as well as for conducting statistical tests and exploring data.\n",
+    "\n",
+    " While scikit-learn is geared more towards predictive modeling and machine learning, statsmodels focuses more on statistical modeling and hypothesis testing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from statsmodels.api import qqplot\n",
+    "from statsmodels.formula.api import ols  #linear regression\n",
+    "from statsmodels.formula.api import logit   #logistic regression\n",
+    "from statsmodels.graphics.mosaicplot import mosaic # plot confusion matrix\n",
+    "import statsmodels.formula.api as sm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scikit-learn\n",
+    "\n",
+    "Scikit-learn is one of the most popular machine learning libraries in Python, and it provides a wide range of tools for building machine learning models. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "# apply different preprocessing steps to subsets of the column\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import OneHotEncoder, MinMaxScaler, StandardScaler\n",
+    "from sklearn.linear_model import LinearRegression, ElasticNet, Ridge, Lasso,LassoCV, BayesianRidge\n",
+    "# provides basic strategies for imputing (or filling in) missing values. \n",
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "from sklearn.metrics import mean_squared_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -79,6 +130,18 @@
     "missing_value_counts = merged.isna().sum()\n",
     "print(missing_value_counts)\n",
     "\n",
+    "\n",
+    "# fillin, drop & outlier\n",
+    "df['age'].fillna(df['age'].median(), inplace=True) # missing value\n",
+    "df.drop_duplicates(inplace=True) # drop duplicated\n",
+    "df.duplicated()\n",
+    "df['sex'] = df['sex'].astype('category') # convert datatype\n",
+    "\n",
+    "# Addressing outliers: remove rows where 'fare' is greater than 3 standard deviations from the mean\n",
+    "fare_mean = df['fare'].mean()\n",
+    "fare_std = df['fare'].std()\n",
+    "df = df[(df['fare'] >= fare_mean - 3 * fare_std) & (titanic['fare'] <= fare_mean + 3 * fare_std)]\n",
+    "     \n",
     "\n",
     "\n",
     "df['date'] = pd.to_datetime['date']  convert the datatype\n",
@@ -149,6 +212,149 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "PLOTS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot() #lineplot\n",
+    "plt.scatter()  # scatter plot\n",
+    "plt.bar()\n",
+    "plt.hist()\n",
+    "plt.boxplot()\n",
+    "plt.pie()\n",
+    "plt.imshow() # display data as an image , for example in heatmaps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "sns.histplot(df['col']) \n",
+    "sns.scatterplot()   # two numerical variables\n",
+    "sns.regplot()  # scatter plot with a regression line.\n",
+    "sns.lmplot() # scatter plot with a regression line.\n",
+    "sns.barplot()\n",
+    "sns.violinplot() # combinatin of a boxplot and kernel density estimate  \n",
+    "sns.resiplot() # residual plot\n",
+    "sns.lineplot()\n",
+    "sns.pairplot() # showing pairwise relationships in a dataset.\n",
+    "sns.countplot() # 创建一个条形图， 每个条形图对应数据库中的一个类别('cat''dog','rabbit')\n",
+    "sns.residplot()     #plot residual\n",
+    "sns.lmplot（ x,y, hue）  #加上分类和颜色时  #hue for categories  # for linear regression plto\n",
+    "sns.boxenplot(  showmeans=True)   # categorical \n",
+    "sns.boxplot(x=df['airline'],y=df['price'],palette='hls')  # mutictegories on X-axis. \n",
+    "corr_matrix = titanic.corr()\n",
+    "sns.heatmap(corr_matrix, annot=True, cmap='coolwarm')   #heatmap\n",
+    "\n",
+    "\n",
+    "df.plot(kind=bar)   #categorical variable vs numerical variable. \n",
+    "df.hist(figsize=(12, 10)) # we can quickly create all histograms at once \n",
+    "\n",
+    "#create a new figure, you can add subplots in it. \n",
+    "fig = plt.figure()  \n",
+    "plt.figure(figsize=(10,5))\n",
+    "\n",
+    "# create multiple subplots in one fig.\n",
+    "fig, ax = plt.subplots(figsize=(10,8))\n",
+    "fig, ax1, ax2, ax3 = plt.subplots(3, figsize=(10,8))\n",
+    "fig, ((ax1, ax2), (ax3,ax4)) = plt.subplots(2,2, figsize=(10,8))\n",
+    "\n",
+    "plt.axline(xy1=(150,150), slope=1, linewidth=2, color ='green') #father_son data\n",
+    "plt.axline(y=1, linestyle='dotted')\n",
+    "\n",
+    "plt.title()\n",
+    "plt.ylabel\n",
+    "plt.xlabel\n",
+    "plt.legend(loc='upper center', bbox_to_anchor=(1.3,1))  # put legend out of the box(not cover anything)\n",
+    "\n",
+    "plt.axis('equal')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# # measure central tendency\n",
+    "np.mean(data)\n",
+    "np.median(data)\n",
+    "np.max(data)\n",
+    "np.min(data)\n",
+    "np.sqrt()\n",
+    "np.arrange(0,21)\n",
+    " \n",
+    "stats.mode(data)[0][0]\n",
+    "\n",
+    "# Measure of Dispersion\n",
+    "\n",
+    "np.ptp(data)    #range peak to peak\n",
+    "np.var(data)    # variance\n",
+    "np.std(data)    # standard deviation\n",
+    "scipy.stats.iqr(data) #iqr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Skewness & Kurtosis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Skewness & Kurtosis\n",
+    "\n",
+    "scipy.stats.skew(data)   or stats.skew()\n",
+    "scipy.stats.kurtosis(data, fisher=True)\n",
+    "stats.zscore(data)  #z-score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Measuring correlations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# measuring relationship\n",
+    "pearson_corr, p_val = stats.pearsonr()  # two linear variables\n",
+    "df.corr(numeric_only=True)  # calculate Pearson's correlation directly in Pandas\n",
+    "np.cov(x,y)[0,1]    # covariance\n",
+    "corr, p_val = stats.spearsmanr(x,y) # x, y 为数列 # Spearsman"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Define functions and create new column"
    ]
   },
@@ -194,27 +400,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# # measure central tendency\n",
-    "np.mean(data)\n",
-    "np.median(data)\n",
-    "np.max(data)\n",
-    "np.min(data)\n",
-    "np.sqrt()\n",
-    "np.arrange(0,21)\n",
-    " \n",
-    "stats.mode(data)[0][0]\n",
-    "\n",
-    "# Measure of Dispersion\n",
-    "\n",
-    "np.ptp(data)    #range peak to peak\n",
-    "np.var(data)    # variance\n",
-    "np.std(data)    # standard deviation\n",
-    "scipy.stats.iqr(data) #iqr\n"
+    "Dummy variables"
    ]
   },
   {
@@ -223,78 +412,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Skewness & Kurtosis\n",
+    "# create dummy variables\n",
+    "# convert season to dummies\n",
+    "# rename seasons\n",
+    "season_mapping = {1:'winter', 2:'spring',3:'summer',4:'fall'}\n",
+    "bikes['season'] = bikes['season'].map(season_mapping)\n",
     "\n",
-    "scipy.stats.skew(data)   or stats.skew()\n",
-    "scipy.stats.kurtosis(data, fisher=True)\n",
-    "stats.zscore(data)  #z-score\n",
-    "\n"
+    "#create season dummies\n",
+    "season_dummies = pd.get_dummies(bikes['season'])\n",
+    "\n",
+    "season_dummies = season_dummies.astype(int)\n",
+    "dummies_season = pd.get_dummies(bikes['season'], dtype=int)\n",
+    "bikes = pd.concat([bikes, season_dummies], axis=1)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# measuring relationship\n",
-    "pearson_corr, p_val = stats.pearsonr()  # two linear variables\n",
-    "df.corr(numeric_only=True)  # calculate Pearson's correlation directly in Pandas\n",
-    "np.cov(x,y)[0,1]    # covariance\n",
-    "corr, p_val = stats.spearsmanr(x,y) # x, y 为数列 # Spearsman\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# PLOTS\n",
-    "\n",
-    "fig = plt.figure()  # create a new figure, including multiple plots in one figure\n",
-    "sns.histplot(df['col']) \n",
-    "sns.scatterplot()   # two numerical variables\n",
-    "sns.regplot()   \n",
-    "sns.resiplot() # residual plot\n",
-    "sns.lineplot()\n",
-    "sns.countplot() # 创建一个条形图， 每个条形图对应数据库中的一个类别('cat''dog','rabbit')\n",
-    "\n",
-    "sns.lmplot（ x,y, hue）  #加上分类和颜色时  #hue for categories  # for linear regression plto\n",
-    "sns.boxenplot(  showmeans=True)   # categorical \n",
-    "sns.boxplot(x=df['airline'],y=df['price'],palette='hls')  # mutictegories on X-axis. \n",
-    "df.plot(kind=bar)   #categorical variable vs numerical variable. \n",
-    "df.hist(figsize=(12, 10)) # we can quickly create all histograms at once \n",
-    "corr_matrix = titanic.corr()\n",
-    "sns.heatmap(corr_matrix, annot=True, cmap='coolwarm')   #heatmap\n",
-    "plt.axline(xy1=(150,150), slope=1, linewidth=2, color ='green') #father_son data\n",
-    "plt.axline(y=1, linestyle='dotted')\n",
-    "sns.residplot()     #plot residual\n",
-    "plt.title()\n",
-    "plt.ylabel\n",
-    "plt.xlabel\n",
-    "plt.legend(loc='upper center', bbox_to_anchor=(1.3,1))  # put legend out of the box(not cover anything)\n",
-    "plt.figure(figsize=(10,5))\n",
-    "fig, ax = plt.subplots(figsize=(10,8))\n",
-    "plt.axis('equal')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# fillin, drop & outlier\n",
-    "df['age'].fillna(df['age'].median(), inplace=True) # missing value\n",
-    "df.drop_duplicates(inplace=True) # drop duplicated\n",
-    "df.duplicated()\n",
-    "df['sex'] = df['sex'].astype('category') # convert datatype\n",
-    "\n",
-    "# Addressing outliers: remove rows where 'fare' is greater than 3 standard deviations from the mean\n",
-    "fare_mean = df['fare'].mean()\n",
-    "fare_std = df['fare'].std()\n",
-    "df = df[(df['fare'] >= fare_mean - 3 * fare_std) & (titanic['fare'] <= fare_mean + 3 * fare_std)]"
+    "Hypothesis testing"
    ]
   },
   {
@@ -442,6 +578,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Feature engineering"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -507,11 +650,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Simple linear Regression"
+    "OLS"
    ]
   },
   {
@@ -522,7 +664,8 @@
    "source": [
     "from statsmodels.formula.api import ols \n",
     "model = ols('y~x', data=df)\n",
-    "price = ols('y!x', data=df).fit()\n",
+    "price = ols('y~x', data=df).fit()\n",
+    "print(price.summary()) #get OLS report\n",
     "coeffs = model.params   # get the coefficients \n",
     "\n",
     "intercept = model.params[0] # get the intercept\n",
@@ -561,7 +704,20 @@
     "qqplot(data=model.resid, fit=True, line='45') # compare the data quantiles to a normal distribution\n",
     "\n",
     "\n",
-    "# \n"
+    "#probability plot\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "stats.probplot(res['error'], dist='norm', plot=ax)\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "# check influencer\n",
+    "infl = results.get_influence()\n",
+    "print(infl.summary_frame()) \n",
+    "infl.summary_frame()\n",
+    "# influencer plot\n",
+    "fig, ax = plt.subplots(figsize=(12,8))\n",
+    "fig = sm.graphics.influence_plot(results, ax=ax, criterion='cooks')"
    ]
   },
   {
@@ -665,6 +821,189 @@
     "# sensitivity: the % of the true positive , higher is better \n",
     "# specificity: the % of true negative, higher is better\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Build Linear Regression -Machine Learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. 未经处理的原始数据\n",
+    "\n",
+    "2. seperate features and target . categorical & numberical\n",
+    "\n",
+    "3. split the data\n",
+    "\n",
+    "4. define transformer: the rules to transform data\n",
+    "\n",
+    "5. build preprocessor: To repares or transforms raw data into a format that is more suitable for modeling. \n",
+    "\n",
+    "6. Build Pipeline. \n",
+    " Allows you to chain together multiple steps in a machine learning workflow. The benefit of using a Pipeline is that it ensures a consistent workflow from preprocessing to modeling. \n",
+    "\n",
+    "        preprecessor step\n",
+    "\n",
+    "        modeling step: the estimateor used is LinearRegression\n",
+    "7. Fit the model\n",
+    "\n",
+    "8. prefict\n",
+    "\n",
+    "9. Measure performance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "前期处理"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# separate features and target\n",
+    "categorical_features = ['workingday','season', 'weather']\n",
+    "numerical_features = ['temp','humidity', 'windspeed']\n",
+    "target = 'casual'\n",
+    "\n",
+    "# split data in train / test\n",
+    "X_train, X_test, y_train, y_test = train_test_split(bikes[categorical_features + numerical_features]\n",
+    "                                                    ,bikes[target],\n",
+    "                                                    test_size = 0.3, random_state=1234)\n",
+    "\n",
+    "# define transformers\n",
+    "cat_transformer = Pipeline(steps = [('onehot', OneHotEncoder(handle_unknown='ignore'))])\n",
+    "num_transformer = Pipeline(steps = [('scaler', StandardScaler())])\n",
+    "\n",
+    "# building processor\n",
+    "preprocessor = ColumnTransformer(transformers = [('cat',cat_transformer, categorical_features),\n",
+    "                                                 ('num', num_transformer, numerical_features)])\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Linear "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Pipeline\n",
+    "linear_regression = Pipeline(steps = [\n",
+    "    ('preprocessor', preprocessor),\n",
+    "    ('regressor', LinearRegression())\n",
+    "])\n",
+    "\n",
+    "#fit model\n",
+    "linear_regression.fit(X_train, y_train)\n",
+    "\n",
+    "# predict\n",
+    "pred = linear_regression.predict(X_test)\n",
+    "\n",
+    "# measure \n",
+    "np.sqrt(mean_squared_error(pred,y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ridge "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# build pipeline\n",
+    "ridge_regression = Pipeline(steps = [\n",
+    "    ('preprocessor', preprocessor),\n",
+    "    ('regressor', Ridge(alpha=3.0))\n",
+    "])\n",
+    "\n",
+    "# fit the model\n",
+    "ridge_regression.fit(X_train, y_train)\n",
+    "#predict \n",
+    "pred_ridge = ridge_regression.predict(X_test)\n",
+    "\n",
+    "# measure\n",
+    "np.sqrt(mean_squared_error(pred_ridge,y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lasso"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# build pipeline\n",
+    "lasso_regression = Pipeline(steps = [\n",
+    "    ('preprocessor', preprocessor),\n",
+    "    ('regressor', Lasso(alpha=1.0))\n",
+    "])\n",
+    "\n",
+    "# fit model\n",
+    "lasso_regression.fit(X_train, y_train)\n",
+    "\n",
+    "# predict \n",
+    "lasso_pred = lasso_regression.predict(X_test)\n",
+    "\n",
+    "#measure\n",
+    "np.sqrt(mean_squared_error(lasso_pred, y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ElasticNet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pipeline\n",
+    "elasticnet_regression = Pipeline(steps = [\n",
+    "    ('preprocessor', preprocessor),\n",
+    "    ('regressor', ElasticNet(alpha=1.0, l1_ratio=0.8))\n",
+    "])\n",
+    "\n",
+    "# fit model\n",
+    "elasticnet_regression.fit(X_train, y_train)\n",
+    "\n",
+    "#predict\n",
+    "elasticnet_pred = elasticnet_regression.predict(X_test)\n",
+    "\n",
+    "#measure\n",
+    "np.sqrt(mean_squared_error(elasticnet_pred, y_test))"
+   ]
   }
  ],
  "metadata": {
@@ -674,7 +1013,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.4"
   },
   "orig_nbformat": 4
