--- a/summary.ipynb
+++ b/summary.ipynb
@@ -84,7 +84,16 @@
     "# provides basic strategies for imputing (or filling in) missing values. \n",
     "from sklearn.impute import SimpleImputer\n",
     "\n",
-    "from sklearn.metrics import mean_squared_error"
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.tree import plot_tree\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix"
    ]
   },
   {
@@ -212,7 +221,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "PLOTS"
+    "### PLOTS"
    ]
   },
   {
@@ -266,6 +275,14 @@
     "fig, ax = plt.subplots(figsize=(10,8))\n",
     "fig, ax1, ax2, ax3 = plt.subplots(3, figsize=(10,8))\n",
     "fig, ((ax1, ax2), (ax3,ax4)) = plt.subplots(2,2, figsize=(10,8))\n",
+    "\n",
+    "fig, ((ax1, ax2), (ax3, ax4)) = plt.subplots(2,2, figsize=(10,8))\n",
+    "\n",
+    "sns.boxplot(x='hd',y='age', data=df, ax=ax1)\n",
+    "sns.boxplot(x='hd',y='restbp', data=df, ax=ax2)\n",
+    "sns.boxplot(x='hd',y='chol', data=df, ax=ax3)\n",
+    "sns.boxplot(x='hd',y='thalach', data=df, ax=ax4\n",
+    "\n",
     "\n",
     "plt.axline(xy1=(150,150), slope=1, linewidth=2, color ='green') #father_son data\n",
     "plt.axline(y=1, linestyle='dotted')\n",
@@ -1558,6 +1575,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df.iloc[:,:13]\n",
+    "Y = df.iloc[:, 13]\n",
+    "Y_v2 = df.iloc[:,14]\n",
+    "\n",
+    "\n",
+    "X_encoded = pd.get_dummies(X, columns=cat_columns, dtype=int)\n",
+    "\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_encoded, Y, random_state=123)\n",
+    "\n",
+    "\n",
+    "knn = KNeighborsClassifier(n_neighbors=30)\n",
+    "knn.fit(X_train3, y_train3)\n",
+    "pred3_knn = knn.predict(X_test3)\n",
+    "print(accuracy_score(pred3_knn, y_test3))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1567,7 +1607,55 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.tree import plot_tree\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define X, y\n",
+    "X = df.iloc[:,:13]\n",
+    "Y = df.iloc[:, 13]\n",
+    "Y_v2 = df.iloc[:,14]\n",
+    "\n",
+    "\n",
+    "X_encoded = pd.get_dummies(X, columns=cat_columns, dtype=int)\n",
+    "\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_encoded, Y, random_state=123)\n",
+    "\n",
+    "dt = DecisionTreeClassifier(random_state=123)\n",
+    "dt = dt.fit(X_train, y_train)\n",
+    "\n",
+    "plt.figure(figsize=(20,20))\n",
+    "plot_tree(dt, filled=True, rounded=True, class_names=['0','1','2','3','4'], feature_names=X_encoded.columns)\n",
+    "\n",
+    "\n",
+    "predicted = dt.predict(X_test)\n",
+    "\n",
+    "\n",
+    "print('v1_model: ', accuracy_score(predicted, y_test))\n",
+    "\n",
+    "\n",
+    "predicted_train = dt.predict(X_train)\n",
+    "print(accuracy_score(predicted_train, y_train))\n",
+    "\n",
+    "knn = KNeighborsClassifier(n_neighbors=30)\n",
+    "knn.fit(X_train3, y_train3)\n",
+    "pred3_knn = knn.predict(X_test3)\n",
+    "print(accuracy_score(pred3_knn, y_test3))"
+   ]
   }
  ],
  "metadata": {
