--- a/summary.ipynb
+++ b/summary.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,8 @@
     "from sklearn.tree import plot_tree\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.metrics import accuracy_score, confusion_matrix"
+    "from sklearn.metrics import accuracy_score, confusion_matrix\n",
+    "from sklearn.metrics import f1_score, recall_score, precision_recall_curve, precision_score, roc_auc_score, roc_curve, accuracy_score"
    ]
   },
   {
